ID wird auf server generiert + mit like begonnen

--- a/client/src/app/feed/post/post.component.html
+++ b/client/src/app/feed/post/post.component.html
@@ -1,5 +1,10 @@
 <div *ngIf="post != null" class="card post">
   <div class="card-body">
     {{post.content}}
+    {{post.likes}}
   </div>
+  <form (submit)="$event.preventDefault(); testLike(post.id)">
+    <button class="btn btn-primary" type="submit">Like Test</button>
+    <img src="../../../assets/daumen-hoch.svg" class="like">
+</form>
 </div>
