Like function wird via emitter-service aufgerufen

--- a/client/src/app/feed/post/post.component.html
+++ b/client/src/app/feed/post/post.component.html
@@ -4,7 +4,7 @@
     {{post.likes}}
   </div>
   <form (submit)="$event.preventDefault(); testLike(post.id)">
-    <button class="btn btn-primary" type="submit">Like Test</button>
-    <img src="../../../assets/daumen-hoch.svg" class="like">
+    <!--<button class="btn btn-primary" type="submit">Like Test</button>-->
+    <img (click)="CallFeedPageComponentLikeFunction(post.id)" src="../../../assets/daumen-hoch.svg" class="like">
 </form>
 </div>
