--- a/client/src/app/feed/feed-page/feed-page.component.html
+++ b/client/src/app/feed/feed-page/feed-page.component.html
@@ -7,6 +7,7 @@
 
   <button class="btn btn-primary" type="submit">Submit</button>
 </form>
+<button (click)="getHashtagsTest()" class= "btn btn-primary">getHashtagsTest</button>
 
 <hr>
 
