kommentare fürs verständnis hinzugefügt

--- a/client/src/app/feed/post/post.component.html
+++ b/client/src/app/feed/post/post.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="post != null" class="card post">
-  <div class="card-body">
+  <div class="card-body" id="test">
     {{post.content}}
     {{post.likes}}
   </div>
@@ -7,4 +7,16 @@
     <!--<button class="btn btn-primary" type="submit">Like Test</button>-->
     <img (click)="CallFeedPageComponentLikeFunction(post.id)" src="../../../assets/daumen-hoch.svg" class="like">
 </form>
+<script>
+  
+  hashtag();
+  function hashtag(){
+      var text = document.getElementsByClassName("card-body").innerHTML;
+  var repl = text.replace(/#(\w+)/g, '<a href="/hashtag/$1">#$1</a>');
+  console.log(repl);
+  document.getElementsByClassName("card-body").innerHTML = repl;
+}
+
+
+  </script>
 </div>
