--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,7 +12,14 @@
           Feed
         </a>
       </li>
-      
+
+      <!-- ToDo: Remove Hashtag from NavBar -->
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="hashtag">
+          Hashtag
+        </a>
+      </li>
+
       <!-- Add new navigation elements here -->
     </ul>
   </div>
