--- a/client/src/app/feed/post/post.component.html
+++ b/client/src/app/feed/post/post.component.html
@@ -1,10 +1,23 @@
 <div *ngIf="post != null" class="card post">
   <div class="card-body" id="test">
     {{post.content}}
-    {{post.likes}}
   </div>
   <form (submit)="$event.preventDefault(); testLike(post.id)">
     <!--<button class="btn btn-primary" type="submit">Like Test</button>-->
-    <img (click)="CallFeedPageComponentLikeFunction(post.id)" src="../../../assets/daumen-hoch.svg" class="like">
+    <img *ngIf="$Post.status" (click)="changeCheck($event);CallFeedPageComponentLikeFunction(post.id);" src="../../../assets/elike.jpg" class="like">
+    <img *ngIf="!$Post.status" src="../../../assets/flike.jpg" class="like">
+    {{post.likes}}
 </form>
+<script>
+  
+  hashtag();
+  function hashtag(){
+      var text = document.getElementsByClassName("card-body").innerHTML;
+  var repl = text.replace(/#(\w+)/g, '<a href="/hashtag/$1">#$1</a>');
+  console.log(repl);
+  document.getElementsByClassName("card-body").innerHTML = repl;
+}
+
+
+  </script>
 </div>
